--- a/views/index.html
+++ b/views/index.html
@@ -19,6 +19,13 @@
         >
           +
         </button>
+
+        <button
+          class="cursor-pointer text-2xl transition hover:text-amber-700 mr-[25px]"
+          id="getTheme"
+        >
+          T
+        </button>
       </div>
 
       <!-- products -->
